
*** General ***

* Commands 'method_setup' and 'attribute_setup' now work within a
local theory context.

* Command 'named_theorems' declares a dynamic fact within the context,
together with an attribute to maintain the content incrementally.
This supersedes functor Named_Thms, but with a subtle change of
semantics due to external visual order vs. internal reverse order.


*** Pure ***

* Command "class_deps" takes optional sort arguments constraining
the search space.

* Lexical separation of signed and unsigend numerals: categories "num"
and "float" are unsigend.  INCOMPATIBILITY: subtle change in precedence
of numeral signs, particulary in expressions involving infix syntax like
"(- 1) ^ n".

* Old inner token category "xnum" has been discontinued.  Potential
INCOMPATIBILITY for exotic syntax: may use mixfix grammar with "num"
token category instead.


*** HOL ***

* Bootstrap of listsum as special case of abstract product over lists.
Fact rename:
    listsum_def ~> listsum.eq_foldr
INCOMPATIBILITY.

* Command and antiquotation "value" provide different evaluation slots (again),
where the previous strategy (nbe after ML) serves as default.
Minor INCOMPATIBILITY.

* New (co)datatype package:
  - The 'datatype_new' command has been renamed 'datatype'. The old
    command of that name is now called 'old_datatype' and is provided
    by "~~/src/HOL/Library/Old_Datatype.thy". See
    'isabelle doc datatypes' for information on porting.
    INCOMPATIBILITY.
  - Renamed theorems:
      disc_corec ~> corec_disc
      disc_corec_iff ~> corec_disc_iff
      disc_exclude ~> distinct_disc
      disc_exhaust ~> exhaust_disc
      disc_map_iff ~> map_disc_iff
      sel_corec ~> corec_sel
      sel_exhaust ~> exhaust_sel
      sel_map ~> map_sel
      sel_set ~> set_sel
      sel_split ~> split_sel
      sel_split_asm ~> split_sel_asm
      strong_coinduct ~> coinduct_strong
      weak_case_cong ~> case_cong_weak
    INCOMPATIBILITY.